# emacy

./: .envrc  .gitignore  .gitmodules  Makefile  README.org  config.org  early-init.el  emacy.asd  emacy.org  init  init.el  minie.org  nano.el  pyproject.toml
configs/doomemacs/: config.el  init.el  packages.el  profiles.el
configs/doomemacs/modules/private/chinese/: config.el  packages.el
configs/doomemacs/modules/private/eaf/: config.el  packages.el
configs/doomemacs/modules/private/lsp-bridge/: config.el  packages.el
configs/doomemacs/modules/private/misc/: config.el  packages.el
configs/doomemacs/modules/private/org/: config.el  packages.el
configs/spacemacs/: .gitignore  README.org
configs/spacemacs/layers/liszt/: README.org  funcs.el  layers.el  packages.el
configs/spacemacs/layers/liszt-ide/: README.org  config.el  layers.el  packages.el
configs/spacemacs/layers/liszt-kit/: README.org  config.el  packages.el
configs/spacemacs/layers/liszt-org/: README.org  config.el  layers.el  packages.el
configs/spacemacs/layers/liszt-ui/: README.org  layers.el  packages.el
coparts/doomemacs/: config.el  packages.el
coparts/spacemacs/layers/liszt-kit/: layers.el
env/lisp/: emacy-config-debug.el
env/node/: README.md  bun.lockb
env/python/: README.md  pyproject.toml
env/python/src/emacy/: __init__.py  __main__.py
env/racket/: test.rkt
env/rust/: Cargo.toml
lib/emacy/: emacy-config-develop.el
lisp/: init-complete.el  init-dev.el  init-eaf.el  init-edit.el  init-elpaca.el  init-evil.el  init-file.el  init-git.el  init-highlight.el  init-icon.el  init-ide.el  init-input.el  init-keys.el  init-lisp.el  init-lsp-bridge.el  init-misc.el  init-org.el  init-snippet.el  init-term.el  init-theme.el  init-treesit.el  init-ui.el  init-web.el  init-window.el
modarts/lemacs/: init.el
node/: package.json
profiles/doomemacs/config/: README.org  init.el
profiles/emacy/: .gitignore  README.org  init.org
profiles/emacy/lisp/: init-dev.el
profiles/spacemacs/config/: init.el
python/: pyproject.toml
python/src/emacy/: __init__.py
roswell/: emacy.ros
scripts/: emacy.el  emacy.ros
src/: emacy.lisp  entry  entry.ps1  entry.sh  lemacs.el  profile.el
tests/: emacy.lisp
