[project]
name = "emapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lszio", email = "lszio@qq.com" }
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "epc>=0.0.5",
    "sexpdata==1.0.0",
    "orjson>=3.9.10",
    "six>=1.16.0",
    "paramiko>=3.3.1",
    "rapidfuzz>=3.5.2",
    "tld>=0.13",
    "lxml>=5.0.0",
    "pygetwindow>=0.0.9; sys_platform == 'win32'",
    "mac-app-frontmost>=2020.12.3; sys_platform == 'darwin'",
    "PyQt6>=6.6.1",
    "PyQt6-Qt6>=6.6.1",
    "PyQt6-sip>=13.6.0",
    "PyQt6-WebEngine>=6.6.0",
    "PyQt6-WebEngine-Qt6>=6.6.1",
    "pysocks>=1.7.1",
    "pynput>=1.7.7",
    "inflect>=7.3.0",
    "python-gitlab>=4.7.0",
]
